--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cmdk": "1.0.4",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.3.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
